Fixed deprecation problem.