@@ -237,7 +237,7 @@ public abstract class AXMLFormat<T> extends APersistentFormat<T> implements IPer
 		try (StringWriter stringWriter = new StringWriter()) {
 			final StreamResult streamResult = new StreamResult(stringWriter);
 			final TransformerFactory factory = TransformerFactory.newInstance();
-			factory.setAttribute("indent-number", new Integer(4));
+			factory.setAttribute("indent-number", Integer.valueOf(4));
 			final Transformer transformer = factory.newTransformer();
 			transformer.setOutputProperty(OutputKeys.METHOD, FILE_EXTENSION);
 			transformer.setOutputProperty(OutputKeys.INDENT, YES);
